# AI-Analytics-Platform

./: .gitignore  CONTRIBUTING.md  DATA_VALIDATOR_SUMMARY.md  DEPLOYMENT_SUCCESS.md  Dockerfile  LICENSE  PROJECT_PORTFOLIO.md  PROJECT_SUMMARY.md  README.md  VERIFICATION_REPORT.txt  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.py  validation_report.html
.claude/: settings.local.json
.github/: BRANCH_PROTECTION.md
.github/workflows/: README.md  ci.yml
config/: settings.yaml
docs/: ARCHITECTURE.md  PHASE_4_SUMMARY.md  PLAN.md
examples/: data_validator_example.py
notebooks/examples/: 01_QuickStart.md
src/: __init__.py
src/api/: __init__.py  main.py
src/automl/: __init__.py  optimizer.py
src/compression/: __init__.py  distillation.py  pruning.py  quantization.py
src/continual_learning/: __init__.py  incremental_learner.py  memory_replay.py
src/dashboard/: __init__.py  app.py
src/deployment/: __init__.py  edge_converter.py  inference_optimizer.py  model_packager.py
src/ensemble/: __init__.py  blending.py  stacking.py  voting.py
src/evaluation/: __init__.py  comparator.py  metrics.py
src/explainability/: __init__.py
src/fairness/: __init__.py  bias_detector.py  mitigation.py
src/federated/: __init__.py  client.py  secure_aggregation.py  server.py
src/models/: __init__.py  base.py
src/models/supervised/: __init__.py  classifiers.py  regressors.py
src/monitoring/: __init__.py  drift_detector.py  model_monitor.py
src/multimodal/: __init__.py  feature_extractor.py  fusion.py
src/preprocessing/: DATA_VALIDATOR_README.md  VALIDATOR_QUICK_REFERENCE.md  __init__.py  data_loader.py  data_validator.py  feature_engineer.py  missing_handler.py
src/utils/: __init__.py  config.py  file_handler.py  logger.py  metrics_tracker.py
src/visualization/: __init__.py  interactive.py  model_viz.py  performance_viz.py
tests/: test_data_validator.py
